--- a/fitness-game/src/components/css/sidebar.css
+++ b/fitness-game/src/components/css/sidebar.css
@@ -3,10 +3,11 @@
     position: absolute;
     top: 80px;
     left: 0;
-    height: 100%;
+    height: 91.5%;
     width: 300px;
     background: white;
     z-index: 2;
+    display: flex;
 }
 
 .sidebar.opened {
