--- a/fitness-game/src/components/css/navbar.css
+++ b/fitness-game/src/components/css/navbar.css
@@ -1,113 +1,122 @@
 
-.Navbar {
-  background: rgb(238,210,174);
-  background: radial-gradient(circle, rgba(238,210,174,1) 0%, rgba(148,187,233,1) 100%);
-    width: 100%;
-    height: 80px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    z-index: 100;
-    position: absolute;
-    
-  }
 
-.Navbar-logo {
-  color: #fff;
-  justify-self: start;
-  margin-left: 20px;
+.navbar {
+  width: 100%;
+  height: 80px;
+  background: rgb(195,88,34);
+  background: linear-gradient(0deg, rgba(195,88,34,1) 0%, rgba(207,128,25,1) 100%);
+  display: flex;
+  flex-direction: row;
+  z-index: 100;
+  
+}
+
+.navbar .leftSide {
+  flex: 50%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  padding-left: 125px;
+}
+
+.navbar .leftSide img {
+  cursor: pointer;
+  width: 150px;
+}
+
+.navbar .rightSide {
+  flex: 50%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.navbar a {
+  color: white;
+  text-decoration: none;
+  margin: 20px;
+}
+
+.navbar .rightSide button {
+  background-color: transparent;
+  border: none;
+  color: white;
   cursor: pointer;
 }
 
-.Navbar .leftSide{
-    flex: 50%;
-    display: flex;
-    justify-content: left;
-    align-items: center;
-  
+.navbar .rightSide svg {
+  font-size: 40px;
 }
 
-.Navbar .leftSide .links{
-
-    max-height: 80px;
-   
-
+.navbar #open {
+  padding-left: 0px;
 }
-
-.Navbar .leftSide .links a{
-
-    text-decoration: none;
-    color: white;
-    font-size: 20px;
-    margin-left: 15px;
-}
-
-.Navbar .leftSide button {
+.navbar #open img {
   display: none;
-  margin-left: 20px;
 }
 
-.Navbar .leftSide #hidden{
-  display: flex;
+.navbar #close img {
+  display: inherit;
 }
 
-
-
-.Navbar .rightSide{
-    flex: 50%;
-    display:flex;
-    align-items: center;
-    justify-content: flex-end;
-    padding-right: 25px;
-    
+.navbar #open .hiddenLinks {
+  display: inherit;
+  margin-left: 30px;
 }
 
-.btn {
-    border: none;
-    background: transparent;
-    padding: 6px 50px;
-    font-size: 1.1rem;
-    color: white;
-    background: rgb(0, 212, 212);
-    border-radius: 7px;
-    transition: 0.3s all ease-out;
-    cursor: pointer;
-    display: flex;
+.navbar #close .hiddenLinks {
+  display: none;
+}
 
-
-
-
-  }
-  
-  .btn:hover {
-    color: rgb(0, 212, 212);
-    background: white;
-  }
-
+.navbar #open a {
+  width: 70px;
+  margin: 5px;
+}
 @media only screen and (max-width: 900px) {
- .Navbar .leftSide .links a {
-   font-size: 15px;
-
- }
+  .navbar .rightSide a {
+    width: 70px;
+  }
+  .navbar .leftSide {
+    padding-left: 50px;
+  }
 }
 
-@media only screen and (max-width: 745px) {
-  .Navbar .leftSide .links a {
-    font-size: 10px;
- 
+@media only screen and (max-width: 810px) {
+  .navbar .rightSide a {
+    display: none;
   }
- }
+
+  .navbar .rightSide {
+    justify-content: flex-end;
+    padding-right: 50px;
+  }
+
+  .navbar .rightSide button {
+    display: inherit;
+  }
+}
+
+@media only screen and (min-width: 810px) {
+  .navbar .rightSide button {
+    display: none;
+  }
+
+  .hiddenLinks {
+    display: none;
+  }
+}
 
 @media only screen and (max-width: 650px) {
-  .Navbar .leftSide button {
+  .Navbar .rightSide button {
     display: flex;
   }
 
-  .Navbar .leftSide .links{
+  .Navbar .rightSide .links{
     display: none;
  }
 
- .Navbar .leftSide #hidden{
+ .Navbar .rightSide #hidden{
   position: absolute;
   left: 0px;
   top: 80px;
@@ -121,16 +130,8 @@
   align-items: center;
 }
 
-  .Navbar .leftSide #hidden a{
+  .Navbar .rightSide #hidden a{
     margin: 10px;
     font-size: 25px;
   }
 }
-
-
-
-
-
-
-
-
