--- a/fitness-game/src/components/css/page.css
+++ b/fitness-game/src/components/css/page.css
@@ -1,4 +1,21 @@
+::-webkit-scrollbar {
+    display: none;
+  }
+  
+
+
 .page {
     height: 100vh;
     width: 100vw;
 }
+
+.services {
+    background-image: url('/images/img-9.jpg');
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    color: #fff;
+    font-size: 100px;
+    z-index: 1;
+  }
+
