--- a/fitness-game/src/components/css/navbar.css
+++ b/fitness-game/src/components/css/navbar.css
@@ -3,12 +3,10 @@
 .navbar {
   width: 100%;
   height: 80px;
-  background: rgb(195,88,34);
-  background: linear-gradient(0deg, rgba(195,88,34,1) 0%, rgba(207,128,25,1) 100%);
+  background: #121619;
   display: flex;
   flex-direction: row;
   z-index: 100;
-  
 }
 
 .navbar .leftSide {
