--- a/fitness-game/src/App.css
+++ b/fitness-game/src/App.css
@@ -1,12 +1,10 @@
-.App {
-  width: 100%;
-  height: auto;
-  display: flex;
-  flex-direction: column;
-  font-family: Arial, Helvetica, sans-serif;
-}
-
-body {
-  padding: 0;
+* {
   margin: 0;
+  padding: 0;
+  border: 0;
+  outline: 0;
+  font-size: 100%;
+  vertical-align: baseline;
+  background: transparent;
+  font-family: 'Montserrat', sans-serif;
 }
