--- a/fitness-game/src/components/css/navbar.css
+++ b/fitness-game/src/components/css/navbar.css
@@ -1,120 +1,113 @@
 
+.Navbar {
+  background: rgb(238,210,174);
+  background: radial-gradient(circle, rgba(238,210,174,1) 0%, rgba(148,187,233,1) 100%);
+    width: 100%;
+    height: 80px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 100;
+    position: absolute;
+    
+  }
 
-.navbar {
-  width: 100%;
-  height: 80px;
-  background: #121619;
-  display: flex;
-  flex-direction: row;
-  z-index: 100;
-}
-
-.navbar .leftSide {
-  flex: 50%;
-  height: 100%;
-  display: flex;
-  align-items: center;
-  padding-left: 125px;
-}
-
-.navbar .leftSide img {
-  cursor: pointer;
-  width: 150px;
-}
-
-.navbar .rightSide {
-  flex: 50%;
-  height: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-.navbar a {
-  color: white;
-  text-decoration: none;
-  margin: 20px;
-}
-
-.navbar .rightSide button {
-  background-color: transparent;
-  border: none;
-  color: white;
+.Navbar-logo {
+  color: #fff;
+  justify-self: start;
+  margin-left: 20px;
   cursor: pointer;
 }
 
-.navbar .rightSide svg {
-  font-size: 40px;
+.Navbar .leftSide{
+    flex: 50%;
+    display: flex;
+    justify-content: left;
+    align-items: center;
+  
 }
 
-.navbar #open {
-  padding-left: 0px;
+.Navbar .leftSide .links{
+
+    max-height: 80px;
+   
+
 }
-.navbar #open img {
+
+.Navbar .leftSide .links a{
+
+    text-decoration: none;
+    color: white;
+    font-size: 20px;
+    margin-left: 15px;
+}
+
+.Navbar .leftSide button {
   display: none;
+  margin-left: 20px;
 }
 
-.navbar #close img {
-  display: inherit;
+.Navbar .leftSide #hidden{
+  display: flex;
 }
 
-.navbar #open .hiddenLinks {
-  display: inherit;
-  margin-left: 30px;
-}
 
-.navbar #close .hiddenLinks {
-  display: none;
-}
 
-.navbar #open a {
-  width: 70px;
-  margin: 5px;
-}
-@media only screen and (max-width: 900px) {
-  .navbar .rightSide a {
-    width: 70px;
-  }
-  .navbar .leftSide {
-    padding-left: 50px;
-  }
-}
-
-@media only screen and (max-width: 810px) {
-  .navbar .rightSide a {
-    display: none;
-  }
-
-  .navbar .rightSide {
+.Navbar .rightSide{
+    flex: 50%;
+    display:flex;
+    align-items: center;
     justify-content: flex-end;
-    padding-right: 50px;
-  }
-
-  .navbar .rightSide button {
-    display: inherit;
-  }
+    padding-right: 25px;
+    
 }
 
-@media only screen and (min-width: 810px) {
-  .navbar .rightSide button {
-    display: none;
+.btn {
+    border: none;
+    background: transparent;
+    padding: 6px 50px;
+    font-size: 1.1rem;
+    color: white;
+    background: rgb(0, 212, 212);
+    border-radius: 7px;
+    transition: 0.3s all ease-out;
+    cursor: pointer;
+    display: flex;
+
+
+
+
+  }
+  
+  .btn:hover {
+    color: rgb(0, 212, 212);
+    background: white;
   }
 
-  .hiddenLinks {
-    display: none;
-  }
+@media only screen and (max-width: 900px) {
+ .Navbar .leftSide .links a {
+   font-size: 15px;
+
+ }
 }
+
+@media only screen and (max-width: 745px) {
+  .Navbar .leftSide .links a {
+    font-size: 10px;
+ 
+  }
+ }
 
 @media only screen and (max-width: 650px) {
-  .Navbar .rightSide button {
+  .Navbar .leftSide button {
     display: flex;
   }
 
-  .Navbar .rightSide .links{
+  .Navbar .leftSide .links{
     display: none;
  }
 
- .Navbar .rightSide #hidden{
+ .Navbar .leftSide #hidden{
   position: absolute;
   left: 0px;
   top: 80px;
@@ -128,8 +121,16 @@
   align-items: center;
 }
 
-  .Navbar .rightSide #hidden a{
+  .Navbar .leftSide #hidden a{
     margin: 10px;
     font-size: 25px;
   }
 }
+
+
+
+
+
+
+
+
