--- a/fitness-game/src/components/css/map.css
+++ b/fitness-game/src/components/css/map.css
@@ -5,3 +5,15 @@
 .marker.currentUser {
     width: 60px
 }
+
+.map-side-closed {
+    background: red;
+    width: 100vw;
+    height: 100vh;
+}
+
+.map-side-open {
+    width: calc(100vw - 300px);
+    height: 100vh;
+    transform: translateX(300px)
+}
